[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/images/temp/ui/construction_icon.png" type="Texture" id=1]
[ext_resource path="res://assets/images/temp/ui/power_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/images/temp/ui/agriculture_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/images/temp/ui/medical_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/images/temp/ui/office_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/images/temp/ui/reclaimation_icon.png" type="Texture" id=6]
[ext_resource path="res://assets/images/temp/ui/residential_icon.png" type="Texture" id=7]
[ext_resource path="res://assets/images/temp/ui/factory_icon.png" type="Texture" id=8]
[ext_resource path="res://assets/images/temp/ui/education_icon.png" type="Texture" id=9]
[ext_resource path="res://assets/images/temp/ui/uuc_icon.png" type="Texture" id=10]
[ext_resource path="res://scenes/ui/construction_tool_bar.gd" type="Script" id=11]
[ext_resource path="res://assets/images/temp/ui/recreation_icon.png" type="Texture" id=12]

[sub_resource type="Animation" id=1]
resource_name = "expand"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RecreationBtn:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -60 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OfficeBtn:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -60, 0 ) ]
}

[node name="ConstructionToolBar" type="Control"]
margin_right = 50.0
margin_bottom = 50.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 8
size_flags_vertical = 8
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UUCBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResidentialBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OfficeBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EducationBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MedicalBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReclamationBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FactoryBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
texture_normal = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecreationBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 1
texture_normal = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConstructionBtn" type="TextureButton" parent="."]
margin_right = 50.0
margin_bottom = 50.0
mouse_filter = 1
toggle_mode = true
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/expand = SubResource( 1 )
[connection signal="focus_exited" from="ConstructionBtn" to="." method="_on_ConstructionBtn_focus_exited"]
[connection signal="toggled" from="ConstructionBtn" to="." method="_on_ConstructionBtn_toggled"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
